apps/mealie/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      volumes:
      - name: yasr-volume
        persistentVolumeClaim:
          claimName: yasr-volume
      - name: tz-config
        hostPath:
          path: /etc/localtime
      dnsPolicy: ClusterFirst
      dnsConfig: {}
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 9000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
          - mountPath: /etc/localtime
            name: tz-config
            readOnly: true
          - mountPath: /app/data
            name: yasr-volume
            subPath: configs/mealie
        ports:
          - name: http
            containerPort: 9000
            protocol: TCP
