apps/mealie/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: ClusterIP
  ports:
  - name: fe-http
    port: 3000
    protocol: TCP
    targetPort: fe-http
  selector:
    app.kubernetes.io/name: mealie
